--- a/end.html
+++ b/end.html
@@ -14,7 +14,7 @@
             <h1 id="finalScore">0</h1>
             <form class="end-form-contaier">
                 <h2 id="end-text">
-                    Enter your name below to save
+                    Enter your name 
                 </h2>
                 <input type="text" name="name" id="username" placeholder="Enter your name">
                 <button class="btn" id="saveScoreBtn" type="submit" onclick="saveHighScore(event)" disabled>Save</button>
