--- a/selection-page.html
+++ b/selection-page.html
@@ -9,12 +9,23 @@
     <link rel="stylesheet" href="assests/styles/styles.css">
 </head>
 <body>
-    <div class="container">
+    <!-- <div class="container">
         <div id="home" class="flex-cloumn flex-center">
-            <h1>BLACKMAN QUIZ</h1>
-            <a href="/selection-page.html" class="btn">Play</a>
+            <h1>Select Option</h1>
+            <a href="/game.html" class="btn">Play</a>
             <a href="/highscores.html" id="highscore-btn" class="btn">Highscore <i class="fas fa-crown"></i></a>
             <a type="button" onclick="changeMode()" class="btn"> Dark Mode</a>
+        </div>
+    </div> -->
+
+    <div class="container">
+        <div id="home" class="flex-cloumn flex-center">
+            <h1>Select Option</h1>
+            <a href="/game.html" class="btn">HTML</a>
+            <a href="/game.html" class="btn">CSS</a>
+            <a href="/game.html" class="btn">JAVASCRIPT</a>
+            <a href="/game.html" class="btn">PYTHON</a>
+            <a href="/game.html" class="btn">PHP</a>
         </div>
     </div>
 
