--- a/highscores.html
+++ b/highscores.html
@@ -4,26 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Div Quiz</title>
+    <title>HIGH SCORE</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
     <link rel="stylesheet" href="assests/styles/styles.css">
+    <link rel="stylesheet" href="assests/styles/highscore.css">
 </head>
 <body>
     <div class="container">
-        <div id="home" class="flex-cloumn flex-center">
-            <h1>BLACKMAN QUIZ</h1>
-            <a href="/selection-page.html" class="btn">Play</a>
-            <a href="/highscores.html" id="highscore-btn" class="btn">Highscore <i class="fas fa-crown"></i></a>
-            <a type="button" onclick="changeMode()" class="btn"> Dark Mode</a>
+        <div id="highScores" class="flex center flex-clumn">
+            <h1 id="finalScore">Leaderboard</h1>
+            <ul id="highScoreList"></ul>
+            <a href="/" class="btn">Go Home <i class="fas fa-home"></i></a>
         </div>
     </div>
 
 
 
 
-
-
-    <script src="assests/app.js/home.js"></script>
+    <script src="assests/app.js/highscore.js"></script>
     
 </body>
 </html>
